--- a/Hamburgueria.html
+++ b/Hamburgueria.html
@@ -8,56 +8,16 @@
 </head>
 <body>
     <div class="container-buttons">
-<button class="show-all">Mostrar tudo <br> ForEach</button>
-<button>Mapear <br> Map</button>
-<button>Somar tudo <br> Reduce</button>
-<button>Filtrar <br> Filter</button>
+        <button class="show-all">Mostrar tudo <br> ForEach</button>
+        <button>Mapear <br> Map</button>
+        <button>Somar tudo <br> Reduce</button>
+        <button>Filtrar <br> Filter</button>
     </div>
 
-<ul>
+    <ul id="menu-list"></ul>
 
-<li >
-    <img src="./Assets/bacon-egg.png">
-    <p>X-bacon Egg</p>
-    <p class="item-price">R$ 30,00</p>
-</li>
-
-<li>
-    <img src="./Assets/monstruoso-vegan.png">
-    <p>Mosntruoso Vegan</p>
-    <p class="item-price">R$ 45,00</p>
-</li>
-
-<li>
-    <img src="./Assets/monstruoso.png">
-    <p>Monstruoso</p>
-    <p class="item-price">R$ 47,00</p>
-</li>
-    
-<li>
-    <img src="./Assets/xbacon.png">
-    <p>X-bacon</p>
-    <p class="item-price">R$ 38,00</p>
-</li>
-
-<li>
-    <img src="./Assets/xsalada.jpeg">
-    <p>X-salada</p>
-    <p class="item-price">R$ 41,00</p>
-</li>
-
-<li>
-    <img src="./Assets/xvegan.png">
-    <p>X-vegan</p>
-    <p class="item-price">R$ 47,00</p>
-</li>
-
-
-</ul>
-
+    <script src="./Products.js"></script>
+    <script src="./Scripts.js"></script>
+    <script src="./main.js"></script>
 </body>
-
-<script src="./Products.js"></script>
-<script src="./Scripts.js"></script>
-
 </html>
